--- a/newhomepage/examples.html
+++ b/newhomepage/examples.html
@@ -72,11 +72,11 @@
                                                 Pricing
                                             </a>
                                         </li>
-                                        <li class="nav-item">
+<!--                                         <li class="nav-item">
                                             <a href="#" class="nav-link">
                                                 Blog
                                             </a>
-                                        </li>
+                                        </li> -->
 <!--                                         <li class="nav-item nav-item-extend">
                                             <a href="#" class="nav-link">
                                                 Login
@@ -123,7 +123,7 @@
                                                 <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
                                             </div>
                                             <div class="card-body">
-                                                <h3 class="card-title">Mobile App Sample (Medium)</h3>
+                                                <h3 class="card-title">Desktop Website Example</h3>
                                             </div>
                                         </div>
                                         <!--/ End Video Card -->
@@ -136,7 +136,7 @@
                                                 <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
                                             </div>
                                             <div class="card-body">
-                                                <h3 class="card-title">Mobile App Sample (Medium)</h3>
+                                                <h3 class="card-title">Mobile App Example</h3>
                                             </div>
                                         </div>
                                         <!--/ End Video Card -->
@@ -149,7 +149,7 @@
                                                 <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
                                             </div>
                                             <div class="card-body">
-                                                <h3 class="card-title">Mobile App Sample (Medium)</h3>
+                                                <h3 class="card-title">Invision Prototype Example</h3>
                                             </div>
                                         </div>
                                         <!--/ End Video Card -->
@@ -162,19 +162,19 @@
                                                 <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
                                             </div>
                                             <div class="card-body">
-                                                <h3 class="card-title">Mobile App Sample (Medium)</h3>
+                                                <h3 class="card-title">iOS Testflight Example </h3>
                                             </div>
                                         </div>
                                         <!--/ End Video Card -->
                                     </div>
                                 </div>
-                                <div class="row">
+<!--                                 <div class="row">
                                     <div class="col-12 text-center">
                                         <div class="video-btn text-center">
                                             <a href="#" class="btn-text btn-text-secondary text-uppercase">View more</a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <!--/ End Video Grid -->
                         </div>
@@ -189,7 +189,7 @@
                 <div class="row">
                     <div class="col-11 col-lg-7 mx-auto">
                         <h2 class="section-title h2 text-center">
-                                Target users within our pool or with your own users
+                                Customize your test questions based on our proven templates
                             </h2>
                     </div>
                     <div class="col-lg-10 mx-auto">
@@ -211,7 +211,28 @@
                 <div class="row">
                     <div class="col-11 col-lg-7 mx-auto">
                         <h2 class="section-title h2 text-center">
-                                Customize test questions based on our proven templates
+                                Target user personas from our panel or test w/ your own users
+                            </h2>
+                    </div>
+                    <div class="col-lg-10 mx-auto">
+                        <div class="box p-0">
+                            <img src="./assets/images/empty-img.png" alt="Empty image" class="img-fluid feature-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Background Image -->
+            <img src="./assets/images/example-img-3.png" alt="Customize Feature" class="target-feature-bg-3 examples-feature-bg">
+            <!--/ End Background Image -->
+        </section>
+        <!--/ End Section -->
+        <!-- Section -->
+        <section class="feature customise-feature section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-11 col-lg-7 mx-auto">
+                        <h2 class="section-title h2 text-center">
+                                Manage all your tests and test results in one place
                             </h2>
                     </div>
                     <div class="col-lg-10 mx-auto">
@@ -231,9 +252,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-11 col-lg-7 mx-auto">
-                        <h2 class="section-title h2 text-center">
-                                Manage all your tests and test results in one place 
-                            </h2>
+                        <h2 class="section-title h2 text-center">Easily customize your monthly test details and schedule</h2>
                     </div>
                     <div class="col-lg-10 mx-auto">
                         <div class="box p-0">
@@ -308,18 +327,18 @@
                             </ul>
                             <ul class="nav col-7 col-lg flex-column align-items-start">
                                 <li class="nav-link nav-head text-uppercase">Learn More</li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Examples</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Pricing</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">FAQ</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">UserLook Recorder</a></li>
+                                <li class="nav-item"><a href="examples.html" class="nav-link text-black">Examples</a></li>
+                                <li class="nav-item"><a href="pricing.html" class="nav-link text-black">Pricing</a></li>
+                                <li class="nav-item"><a href="pricing.html" class="nav-link text-black">FAQ</a></li>
+                                <li class="nav-item"><a href="https://recorder.userlook.co" target="_blank" class="nav-link text-black">UserLook Recorder</a></li>
                                 <li class="nav-item"><a href="#" class="nav-link text-black">Blog</a></li>
                             </ul>
                             <ul class="nav col-6 col-lg flex-column align-items-start">
                                 <li class="nav-link nav-head text-uppercase">About</li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Contact Us</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Twitter</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Terms</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Privacy</a></li>
+                                <li class="nav-item"><a href="mailto:userlookco@gmail.com" class="nav-link text-black">Contact Us</a></li>
+                                <li class="nav-item"><a href="https://www.twitter.com/userlookco" target="_blank" class="nav-link text-black">Twitter</a></li>
+                                <li class="nav-item"><a href="https://userlook.co/assets/landing/UserLookTermsofUse.html" class="nav-link text-black">Terms</a></li>
+                                <li class="nav-item"><a href="https://userlook.co/assets/landing/UserLookPrivacyPolicy.html" class="nav-link text-black">Privacy</a></li>
                             </ul>
                         </div>
                     </div>
@@ -336,12 +355,12 @@
                     <div class="col-lg-4">
                         <ul class="nav footer-social justify-content-left justify-content-lg-end">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="https://medium.com/@userlookco" target="_blank" class="nav-link">
                                     <img src="./assets/images/icons/medium.png" alt="medium icon" class="img-fluid icon">
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="https://www.twitter.com/userlookco" target="_blank" class="nav-link">
                                     <img src="./assets/images/icons/twitter.png" alt="twitter icon" class="img-fluid icon">
                                 </a>
                             </li>
