--- a/newhomepage/index.html
+++ b/newhomepage/index.html
@@ -77,11 +77,11 @@
                                                 Pricing
                                             </a>
                                         </li>
-                                        <li class="nav-item">
+<!--                                         <li class="nav-item">
                                             <a href="#" class="nav-link">
                                                 Blog
                                             </a>
-                                        </li>
+                                        </li> -->
 <!--                                         <li class="nav-item nav-item-extend">
                                             <a href="#" class="nav-link">
                                                 Login
@@ -108,13 +108,15 @@
                 <div class="hero section">
                     <div class="container-fluid">
                         <div class="row align-items-center justify-content-center">
-                            <div class="col-12 col-sm-10 col-md-8 col-lg-6 text-center">
+                            <div class="col-12 col-sm-10 col-md-8 col-lg-5 text-center">
                                 <h1 class="hero-title">
-                                    Discover Real User Insights Effortlessly
-                                </h1>
-                                <p class="hero-lead lead px-lg-4">
-                                    Watch people use your mobile app/website while sharing their unbiased thoughts & opinions.
-                                </p>
+                                    Get Actionable User Insights Effortlessly
+<!--                                     Discover Real User Insights Effortlessly
+ -->                                </h1>
+                                <p class="hero-lead lead px-lg-5">
+                                    Watch people talk honestly about your mobile app or website while using it 📱🎥
+<!--                                     Watch people use your mobile app/website while sharing their unbiased thoughts & opinions.
+ -->                                </p>
                                 <!-- Empty Space -->
                                 <div class="space-lg"></div>
                                 <!--/ End Empty Space -->
@@ -150,7 +152,15 @@
                             </div>
                         </div>
                         <!--/ End Video Card -->
+                        <div class="company-logos text-center">
+                            <img class="companylogo_img" src="./assets/images/cakelogo.png" alt="company logos">
+                            <img class="companylogo_img" src="./assets/images/urbanftlogo.png" alt="company logos">
+                            <img class="companylogo_img" src="./assets/images/snaptravellogo.png" alt="company logos">
+                            <img class="companylogo_img" src="./assets/images/leaninlogo.png" alt="company logos">
+
+                        </div>
                         <div class="video-btn text-center">
+
                             <a href="#" class="btn btn-md btn-outline-secondary">
                                         See Examples
                                         <svg viewBox="0 0 21.855 14.528" class="icon">
@@ -320,7 +330,7 @@
                                         <div class="col">
                                             <div class="name">Alexx</div>
                                             <div class="position">CEO</div>
-                                            <cite title="Coach Rabbit">@ Coach Rabbit</cite>
+                                            <cite title="Coach Rabbit">@ CoachRabbit</cite>
                                         </div>
                                     </div>
                                 </div>
@@ -355,9 +365,9 @@
                         </div>
                         <!--/ End Single Testimonials -->
                     </div>
-                    <div class="col-12 text-center testimonial-btn">
+<!--                     <div class="col-12 text-center testimonial-btn">
                         <a href="#" class="btn-text btn-sm btn-text-secondary text-uppercase">View More</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -375,7 +385,7 @@
                         <div class="space-lg"></div>
                         <!--/ End Empty Space -->
                         <div class="text-center">
-                            <a href="#" class="btn btn-primary btn-lg text-uppercase">GET USER VIDEOS</a>
+                            <a href="#" class="btn btn-primary btn-lg text-uppercase">GET USER INSIGHTS</a>
                         </div>
                     </div>
                 </div>
@@ -403,18 +413,18 @@
                             </ul>
                             <ul class="nav col-7 col-lg flex-column align-items-start">
                                 <li class="nav-link nav-head text-uppercase">Learn More</li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Examples</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Pricing</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">FAQ</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">UserLook Recorder</a></li>
+                                <li class="nav-item"><a href="examples.html" class="nav-link text-black">Examples</a></li>
+                                <li class="nav-item"><a href="pricing.html" class="nav-link text-black">Pricing</a></li>
+                                <li class="nav-item"><a href="pricing.html" class="nav-link text-black">FAQ</a></li>
+                                <li class="nav-item"><a href="https://recorder.userlook.co" target="_blank" class="nav-link text-black">UserLook Recorder</a></li>
                                 <li class="nav-item"><a href="#" class="nav-link text-black">Blog</a></li>
                             </ul>
                             <ul class="nav col-6 col-lg flex-column align-items-start">
                                 <li class="nav-link nav-head text-uppercase">About</li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Contact Us</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Twitter</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Terms</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Privacy</a></li>
+                                <li class="nav-item"><a href="mailto:userlookco@gmail.com" class="nav-link text-black">Contact Us</a></li>
+                                <li class="nav-item"><a href="https://www.twitter.com/userlookco" target="_blank" class="nav-link text-black">Twitter</a></li>
+                                <li class="nav-item"><a href="https://userlook.co/assets/landing/UserLookTermsofUse.html" class="nav-link text-black">Terms</a></li>
+                                <li class="nav-item"><a href="https://userlook.co/assets/landing/UserLookPrivacyPolicy.html" class="nav-link text-black">Privacy</a></li>
                             </ul>
                         </div>
                     </div>
@@ -431,12 +441,12 @@
                     <div class="col-lg-4">
                         <ul class="nav footer-social justify-content-left justify-content-lg-end">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="https://medium.com/@userlookco" target="_blank" class="nav-link">
                                     <img src="./assets/images/icons/medium.png" alt="medium icon" class="img-fluid icon">
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="https://www.twitter.com/userlookco" target="_blank" class="nav-link">
                                     <img src="./assets/images/icons/twitter.png" alt="twitter icon" class="img-fluid icon">
                                 </a>
                             </li>
