--- a/newhomepage/pricing.html
+++ b/newhomepage/pricing.html
@@ -72,11 +72,11 @@
                                                 Pricing
                                             </a>
                                         </li>
-                                        <li class="nav-item">
+<!--                                         <li class="nav-item">
                                             <a href="#" class="nav-link">
                                                 Blog
                                             </a>
-                                        </li>
+                                        </li> -->
 <!--                                         <li class="nav-item nav-item-extend">
                                             <a href="#" class="nav-link">
                                                 Login
@@ -120,7 +120,7 @@
                                         <div class="single-pricing box d-lg-flex flex-column flex-nowrap">
                                             <div class="single-pricing-plan">
                                                 <div class="plan-period">
-                                                    <span>ONE-TIME</span> 1 Videos
+                                                    <span>ONE-TIME</span> 1 Video
                                                 </div>
                                                 <div class="plan-price">$9</div>
                                             </div>
@@ -177,7 +177,7 @@
                                                 </ul>
                                                 <ul class="plan-features">
                                                     <li class="plan-feature">6 Eight-Minute Videos Sent Monthly</li>
-                                                    <li class="plan-feature">Customize Test Schedule & Details Anytime </li>
+                                                    <li class="plan-feature">Control Test Schedules & Details Anytime </li>
                                                     <li class="plan-feature">Video Transcription</li>
                                                     <li class="plan-feature">Cancel Anytime</li>
                                                 </ul>
@@ -209,7 +209,7 @@
                                                 </ul>
                                                 <ul class="plan-features">
                                                     <li class="plan-feature">8 Eight-Minute Videos Sent Monthly</li>
-                                                    <li class="plan-feature">Customize Test Schedule & Details Anytime </li>
+                                                    <li class="plan-feature">Control Test Schedules & Details Anytime </li>
                                                     <li class="plan-feature">Video Transcription</li>
                                                     <li class="plan-feature">Cancel Anytime</li>
                                                 </ul>
@@ -238,6 +238,7 @@
                 </div>
             </div>
         </div>
+
         <!--/ End Page -->
         <!-- FAQ -->
         <section class="faq section">
@@ -263,7 +264,7 @@
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">Can I target users by age, gender and other criteria?</h3>
-                                    <p class="single-faq__lead lead">Age, gender and common occupation is easiest to target. You can think of user targeting like a 'user persona'  If your target user is ‘Netflix users under age 50’ that is a very doable persona. Hoswever it’s ‘Moms with babies under 2 weeks old' it may be difficult for us to find those users within our pool. We'll let you know asap if that is the case. Otherwise, contact us if you feel unsure :)</p>
+                                    <p class="single-faq__lead lead">Age, gender and common occupation is easiest to target. You can think of user targeting as a 'user persona'  If your target user persona is ‘Netflix users under age 50’ that is likely realistic. However if it’s ‘Moms with babies under 2 weeks old' it may be difficult for us to find those users within our pool. We'll let you know asap if there is any difficulty with your targeting. Otherwise, <a href="mailto:userlookco@gmail.com">contact us</a> anytime with questions :)</p>
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
@@ -271,7 +272,7 @@
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">Can I test prototype mockups, Testflight beta apps?</h3>
-                                    <p class="single-faq__lead lead">Yes and yes. Many of our customers test prototype links from tools such as Invision, Marvel and others. You can also do usability testing with your iOS Testflight app by entering in your public Testflight link recently made available by Apple Appstore Connect.</p>
+                                    <p class="single-faq__lead lead">Yes and yes. Many of our customers test prototype links from tools such as Invision, Sketch, Figma, Marvel and others. You can also do usability testing with your iOS Testflight app by simply entering in your public Testflight link recently made available by Apple Appstore Connect.</p>
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
@@ -279,7 +280,7 @@
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">Who are the users testing my mobile app or website?</h3>
-                                    <p class="single-faq__lead lead">Our recruited users are everyday English speakers from US, Canada and Australia. We recruit them w/ our own marketing as well as source them from 3rd party services like amazon mechanical turk. We do our best train, qualify and vet all our user testers so that you get quality feedback.</p>
+                                    <p class="single-faq__lead lead">Our recruited users are thousands of everyday English speakers from US, Canada and Australia. We recruit them w/ our own marketing as well as through 3rd party platforms like amazon mechanical turk. We spend lots of time to train, qualify and vet all our user testers so that you always get quality feedback.</p>
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
@@ -394,7 +395,7 @@
                                         <div class="col">
                                             <div class="name">Alexx</div>
                                             <div class="position">CEO</div>
-                                            <cite title="Coach Rabbit">@ Coach Rabbit</cite>
+                                            <cite title="Coach Rabbit">@ CoachRabbit</cite>
                                         </div>
                                     </div>
                                 </div>
@@ -477,18 +478,18 @@
                             </ul>
                             <ul class="nav col-7 col-lg flex-column align-items-start">
                                 <li class="nav-link nav-head text-uppercase">Learn More</li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Examples</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Pricing</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">FAQ</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">UserLook Recorder</a></li>
+                                <li class="nav-item"><a href="examples.html" class="nav-link text-black">Examples</a></li>
+                                <li class="nav-item"><a href="pricing.html" class="nav-link text-black">Pricing</a></li>
+                                <li class="nav-item"><a href="pricing.html" class="nav-link text-black">FAQ</a></li>
+                                <li class="nav-item"><a href="https://recorder.userlook.co" target="_blank" class="nav-link text-black">UserLook Recorder</a></li>
                                 <li class="nav-item"><a href="#" class="nav-link text-black">Blog</a></li>
                             </ul>
                             <ul class="nav col-6 col-lg flex-column align-items-start">
                                 <li class="nav-link nav-head text-uppercase">About</li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Contact Us</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Twitter</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Terms</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Privacy</a></li>
+                                <li class="nav-item"><a href="mailto:userlookco@gmail.com" class="nav-link text-black">Contact Us</a></li>
+                                <li class="nav-item"><a href="https://www.twitter.com/userlookco" target="_blank" class="nav-link text-black">Twitter</a></li>
+                                <li class="nav-item"><a href="https://userlook.co/assets/landing/UserLookTermsofUse.html" class="nav-link text-black">Terms</a></li>
+                                <li class="nav-item"><a href="https://userlook.co/assets/landing/UserLookPrivacyPolicy.html" class="nav-link text-black">Privacy</a></li>
                             </ul>
                         </div>
                     </div>
@@ -505,12 +506,12 @@
                     <div class="col-lg-4">
                         <ul class="nav footer-social justify-content-left justify-content-lg-end">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="https://medium.com/@userlookco" target="_blank" class="nav-link">
                                     <img src="./assets/images/icons/medium.png" alt="medium icon" class="img-fluid icon">
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="https://www.twitter.com/userlookco" target="_blank" class="nav-link">
                                     <img src="./assets/images/icons/twitter.png" alt="twitter icon" class="img-fluid icon">
                                 </a>
                             </li>
