--- a/newhomepage/examples.html
+++ b/newhomepage/examples.html
@@ -18,6 +18,10 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- Modal Video Script -->
+    <script src="./assets/js/modal-video.js"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/css/modal-video.min.css">
+
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="" />
     <meta property="og:image" content="" />
@@ -118,52 +122,60 @@
                                     <div class="col-10 mx-auto col-lg-5">
                                         <!-- Video Card -->
                                         <div class="video-card card mx-auto text-center">
-                                            <img class="card-img video-card__img" src="./assets/images/video.png" alt="Video image">
-                                            <div class="card-img-overlay text-center">
-                                                <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
-                                            </div>
-                                            <div class="card-body">
-                                                <h3 class="card-title">Desktop Website Example</h3>
-                                            </div>
+                                            <a href="#" class="js-modal-video" data-video-id="52xV47eZVG4">
+                                                <img class="card-img video-card__img" src="./assets/images/samplevid_mediumweb.png" alt="Video image">
+                                                <div class="card-img-overlay text-center">
+                                                    <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
+                                                </div>
+                                                <div class="card-body">
+                                                    <h3 class="card-title">Desktop Website Example</h3>
+                                                </div>
+                                            </a>
                                         </div>
                                         <!--/ End Video Card -->
                                     </div>
                                     <div class="col-10 mx-auto col-lg-5">
                                         <!-- Video Card -->
                                         <div class="video-card card mx-auto text-center">
-                                            <img class="card-img video-card__img" src="./assets/images/video.png" alt="Video image">
-                                            <div class="card-img-overlay text-center">
-                                                <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
-                                            </div>
-                                            <div class="card-body">
-                                                <h3 class="card-title">Mobile App Example</h3>
-                                            </div>
+                                            <a href="#" class="js-modal-video" data-video-id="zyP7DWxjMlo">
+                                                <img class="card-img video-card__img" src="./assets/images/samplevid_mediumapp.png" alt="Video image">
+                                                <div class="card-img-overlay text-center">
+                                                    <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
+                                                </div>
+                                                <div class="card-body">
+                                                    <h3 class="card-title">Mobile App Example</h3>
+                                                </div>
+                                            </a>
                                         </div>
                                         <!--/ End Video Card -->
                                     </div>
                                     <div class="col-10 mx-auto col-lg-5">
                                         <!-- Video Card -->
                                         <div class="video-card card mx-auto text-center">
-                                            <img class="card-img video-card__img" src="./assets/images/video.png" alt="Video image">
-                                            <div class="card-img-overlay text-center">
-                                                <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
-                                            </div>
-                                            <div class="card-body">
-                                                <h3 class="card-title">Invision Prototype Example</h3>
-                                            </div>
+                                            <a href="#" class="js-modal-video" data-video-id="orT_d2vHEEA">
+                                                <img class="card-img video-card__img" src="./assets/images/samplevid_forager.png" alt="Video image">
+                                                <div class="card-img-overlay text-center">
+                                                    <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
+                                                </div>
+                                                <div class="card-body">
+                                                    <h3 class="card-title">Messenger Bot Example</h3>
+                                                </div>
+                                            </a>
                                         </div>
                                         <!--/ End Video Card -->
                                     </div>
                                     <div class="col-10 mx-auto col-lg-5">
                                         <!-- Video Card -->
                                         <div class="video-card card mx-auto text-center">
-                                            <img class="card-img video-card__img" src="./assets/images/video.png" alt="Video image">
-                                            <div class="card-img-overlay text-center">
-                                                <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
-                                            </div>
-                                            <div class="card-body">
-                                                <h3 class="card-title">iOS Testflight Example </h3>
-                                            </div>
+                                            <a href="#" class="js-modal-video" data-video-id="mUpydWlHnWw">
+                                                <img class="card-img video-card__img" src="./assets/images/samplevid_testflight.png" alt="Video image">
+                                                <div class="card-img-overlay text-center">
+                                                    <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
+                                                </div>
+                                                <div class="card-body">
+                                                    <h3 class="card-title">iOS Testflight Example </h3>
+                                                </div>
+                                            </a>
                                         </div>
                                         <!--/ End Video Card -->
                                     </div>
@@ -189,45 +201,25 @@
                 <div class="row">
                     <div class="col-11 col-lg-7 mx-auto">
                         <h2 class="section-title h2 text-center">
-                                Customize your test questions based on our proven templates
-                            </h2>
-                    </div>
-                    <div class="col-lg-10 mx-auto">
-                        <div class="box p-0">
-                            <img src="./assets/images/empty-img.png" alt="Empty image" class="img-fluid feature-img">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Background Image -->
-            <img src="./assets/images/example-img-1.png" alt="Target Feature" class="target-feature-bg-1 examples-feature-bg">
-            <img src="./assets/images/example-img-2.png" alt="Target Feature" class="target-feature-bg-2 examples-feature-bg">
-            <!--/ End Background Image -->
-        </section>
-        <!--/ End Section -->
-        <!-- Section -->
-        <section class="feature customise-feature section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-11 col-lg-7 mx-auto">
-                        <h2 class="section-title h2 text-center">
                                 Target user personas from our panel or test w/ your own users
                             </h2>
                     </div>
                     <div class="col-lg-10 mx-auto">
                         <div class="box p-0">
-                            <img src="./assets/images/empty-img.png" alt="Empty image" class="img-fluid feature-img">
+                            <img src="./assets/images/examplescreenshot_targetusers.png" alt="Empty image" class="img-fluid feature-img">
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Background Image -->
-            <img src="./assets/images/example-img-3.png" alt="Customize Feature" class="target-feature-bg-3 examples-feature-bg">
-            <!--/ End Background Image -->
+            <img src="./assets/images/example-img-2.png" alt="Customize Feature" class="target-feature-bg-1 examples-feature-bg">
+<!--             <img src="./assets/images/example-img-2.png" alt="Target Feature" class="target-feature-bg-2 examples-feature-bg">
+ -->            <!--/ End Background Image -->
         </section>
         <!--/ End Section -->
+
         <!-- Section -->
-        <section class="feature customise-feature section">
+<!--         <section class="feature customise-feature section">
             <div class="container">
                 <div class="row">
                     <div class="col-11 col-lg-7 mx-auto">
@@ -237,34 +229,59 @@
                     </div>
                     <div class="col-lg-10 mx-auto">
                         <div class="box p-0">
-                            <img src="./assets/images/empty-img.png" alt="Empty image" class="img-fluid feature-img">
+                            <img src="./assets/images/examplescreenshot_managetests.png" alt="Empty image" class="img-fluid feature-img">
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Background Image -->
-            <img src="./assets/images/example-img-3.png" alt="Customize Feature" class="target-feature-bg-3 examples-feature-bg">
+<!--             <img src="./assets/images/example-img-2.png" alt="Customize Feature" class="target-feature-bg-3 examples-feature-bg"> -->
             <!--/ End Background Image -->
-        </section>
+<!--         </section> -->
         <!--/ End Section -->
         <!-- Section -->
         <section class="feature test-feature section">
             <div class="container">
                 <div class="row">
                     <div class="col-11 col-lg-7 mx-auto">
-                        <h2 class="section-title h2 text-center">Easily customize your monthly test details and schedule</h2>
+                        <h2 class="section-title h2 text-center">
+                            Manage all your tests and test results in one place
+                        </h2>
+
                     </div>
                     <div class="col-lg-10 mx-auto">
                         <div class="box p-0">
-                            <img src="./assets/images/empty-img.png" alt="Empty image" class="img-fluid feature-img">
+                            <img src="./assets/images/examplescreenshot_managetests.png" alt="Empty image" class="img-fluid feature-img">
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Background Image -->
-            <img src="./assets/images/example-img-4.png" alt="Target Feature" class="target-feature-bg-4 examples-feature-bg">
-            <img src="./assets/images/example-img-5.png" alt="Target Feature" class="target-feature-bg-5 examples-feature-bg">
+<!--             <img src="./assets/images/example-img-4.png" alt="Target Feature" class="target-feature-bg-4 examples-feature-bg"> -->
+
+            <img src="./assets/images/example-img-3.png" alt="Customize Feature" class="target-feature-bg-2 examples-feature-bg">
+
             <!--/ End Background Image -->
+        </section>
+        <!--/ End Section -->
+        <!-- Section -->
+        <section class="feature customise-feature section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-11 col-lg-7 mx-auto">
+                        <h2 class="section-title h2 text-center">
+                                Customize test questions based on our proven templates
+                            </h2>
+                    </div>
+                    <div class="col-lg-10 mx-auto">
+                        <div class="box p-0">
+                            <img src="./assets/images/examplescreenshot_customizetemplate.png" alt="Empty image" class="img-fluid feature-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Background Image -->
+            <img src="./assets/images/example-img-5.png" alt="Target Feature" class="target-feature-bg-5 examples-feature-bg">            <!--/ End Background Image -->
         </section>
         <!--/ End Section -->
         <!-- Section CTA -->
@@ -272,7 +289,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                        <a href="pricing.html" class="btn btn-sm btn-outline-secondary">
                                 View Pricing
                                 <svg viewBox="0 0 21.855 14.528" class="icon">
                                     <g>
@@ -329,9 +346,9 @@
                                 <li class="nav-link nav-head text-uppercase">Learn More</li>
                                 <li class="nav-item"><a href="examples.html" class="nav-link text-black">Examples</a></li>
                                 <li class="nav-item"><a href="pricing.html" class="nav-link text-black">Pricing</a></li>
-                                <li class="nav-item"><a href="pricing.html" class="nav-link text-black">FAQ</a></li>
+                                <li class="nav-item"><a href="pricing.html#faq" class="nav-link text-black">FAQ</a></li>
                                 <li class="nav-item"><a href="https://recorder.userlook.co" target="_blank" class="nav-link text-black">UserLook Recorder</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Blog</a></li>
+                                <li class="nav-item"><a href="https://blog.userlook.co" class="nav-link text-black" target="_blank">Blog</a></li>
                             </ul>
                             <ul class="nav col-6 col-lg flex-column align-items-start">
                                 <li class="nav-link nav-head text-uppercase">About</li>
@@ -371,6 +388,11 @@
     </footer>
     <!--/ End Footer -->
     </div>
+    <!-- Other scripts -->
+    <script type="text/javascript">
+      new ModalVideo('.js-modal-video');
+    </script>
+
     <!-- jQuery Script -->
     <script src="./assets/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Popper Script -->
