--- a/newhomepage/pricing.html
+++ b/newhomepage/pricing.html
@@ -241,7 +241,7 @@
 
         <!--/ End Page -->
         <!-- FAQ -->
-        <section class="faq section">
+        <section class="faq section" id="faq">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 mx-auto">
@@ -480,9 +480,9 @@
                                 <li class="nav-link nav-head text-uppercase">Learn More</li>
                                 <li class="nav-item"><a href="examples.html" class="nav-link text-black">Examples</a></li>
                                 <li class="nav-item"><a href="pricing.html" class="nav-link text-black">Pricing</a></li>
-                                <li class="nav-item"><a href="pricing.html" class="nav-link text-black">FAQ</a></li>
+                                <li class="nav-item"><a href="pricing.html#faq" class="nav-link text-black">FAQ</a></li>
                                 <li class="nav-item"><a href="https://recorder.userlook.co" target="_blank" class="nav-link text-black">UserLook Recorder</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Blog</a></li>
+                                <li class="nav-item"><a href="https://blog.userlook.co" class="nav-link text-black" target="_blank">Blog</a></li>
                             </ul>
                             <ul class="nav col-6 col-lg flex-column align-items-start">
                                 <li class="nav-link nav-head text-uppercase">About</li>
