--- a/newhomepage/index.html
+++ b/newhomepage/index.html
@@ -18,6 +18,10 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- Modal Video Script -->
+    <script src="./assets/js/modal-video.js"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/css/modal-video.min.css">
+
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="" />
     <meta property="og:image" content="" />
@@ -42,7 +46,7 @@
 <body class="text-body home-page">
     <!-- Notify -->
     <div class="notify">
-        🎉 Free user feedback video w/ auto-delivery trial <a href="#" class="btn btn-pink text-uppercase">Go</a>
+        🎉 Free user feedback video w/ auto-delivery trial <a href="pricing.html" class="btn btn-pink text-uppercase">Go</a>
     </div>
     <!--/ End Notify -->
     <div class="wrapper">
@@ -110,8 +114,9 @@
                         <div class="row align-items-center justify-content-center">
                             <div class="col-12 col-sm-10 col-md-8 col-lg-5 text-center">
                                 <h1 class="hero-title">
-                                    Get Actionable User Insights Effortlessly
-<!--                                     Discover Real User Insights Effortlessly
+                                   Learn from Your Users Effortlessly
+<!--                                     Get Actionable User Insights Effortlessly
+ --><!--                                     Discover Real User Insights Effortlessly
  -->                                </h1>
                                 <p class="hero-lead lead px-lg-5">
                                     Watch people talk honestly about your mobile app or website while using it 📱🎥
@@ -142,14 +147,17 @@
                     <div class="col-12 col-lg-10 mx-auto">
                         <!-- Video Card -->
                         <div class="video-card card mx-auto">
-                            <img class="card-img video-card__img" src="./assets/images/video.png" alt="Video image">
-                            <div class="card-img-overlay text-center">
-                                <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
-                                <!-- Empty Space -->
-                                <div class="space-md d-none d-lg-block"></div>
-                                <!--/ End Empty Space -->
-                                <span class="text-secondary d-none d-lg-block text-uppercase video-card__text">Watch Demo</span>
-                            </div>
+                            <a href="#" class="js-modal-video" data-video-id="pIhr8WuwQ8s">
+
+                                <img class="card-img video-card__img" src="./assets/images/homepage_demo_still.png" alt="Video image">
+                                <div class="card-img-overlay text-center">
+                                    <img class="video-card__play" src="./assets/images/icons/play-btn.png" alt="Play image">
+                                    <!-- Empty Space -->
+                                    <div class="space-md d-none d-lg-block"></div>
+                                    <!--/ End Empty Space -->
+                                    <span class="text-secondary d-none d-lg-block text-uppercase video-card__text">Watch Demo</span>
+                                </div>
+                            </a>
                         </div>
                         <!--/ End Video Card -->
                         <div class="company-logos text-center">
@@ -161,7 +169,7 @@
                         </div>
                         <div class="video-btn text-center">
 
-                            <a href="#" class="btn btn-md btn-outline-secondary">
+                            <a href="examples.html" class="btn btn-md btn-outline-secondary">
                                         See Examples
                                         <svg viewBox="0 0 21.855 14.528" class="icon">
                                             <g>
@@ -194,7 +202,7 @@
                         <div class="space-md"></div>
                         <!--/ End Empty Space -->
                         <p class="section-lead lead">
-                            See, hear, and understand the WHY behind your metrics to improve conversions, usability, UX and retention.
+                            Make confident decisions by understanding the WHY behind your metrics to improve conversions, usability, UX and retention.
                         </p>
                     </div>
                 </div>
@@ -259,7 +267,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                        <a href="pricing.html" class="btn btn-sm btn-outline-secondary">
                                 View Pricing
                                 <svg viewBox="0 0 21.855 14.528" class="icon">
                                     <g>
@@ -415,9 +423,9 @@
                                 <li class="nav-link nav-head text-uppercase">Learn More</li>
                                 <li class="nav-item"><a href="examples.html" class="nav-link text-black">Examples</a></li>
                                 <li class="nav-item"><a href="pricing.html" class="nav-link text-black">Pricing</a></li>
-                                <li class="nav-item"><a href="pricing.html" class="nav-link text-black">FAQ</a></li>
+                                <li class="nav-item"><a href="pricing.html#faq" class="nav-link text-black">FAQ</a></li>
                                 <li class="nav-item"><a href="https://recorder.userlook.co" target="_blank" class="nav-link text-black">UserLook Recorder</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link text-black">Blog</a></li>
+                                <li class="nav-item"><a href="https://blog.userlook.co" class="nav-link text-black" target="_blank">Blog</a></li>
                             </ul>
                             <ul class="nav col-6 col-lg flex-column align-items-start">
                                 <li class="nav-link nav-head text-uppercase">About</li>
@@ -457,6 +465,12 @@
     </footer>
     <!--/ End Footer -->
     </div>
+    <!-- Other scripts -->
+    <script type="text/javascript">
+      new ModalVideo('.js-modal-video');
+    </script>
+    <!-- Modal Video Script -->
+    <script src="./assets/js/modal-video.js"></script>
     <!-- jQuery Script -->
     <script src="./assets/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Popper Script -->
